Configured release singing

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -125,6 +125,22 @@ def enableHermes = project.ext.react.get("enableHermes", false);
  */
 def nativeArchitectures = project.getProperties().get("reactNativeDebugArchitectures")
 
+// allprojects {
+//     afterEvaluate { project ->
+//         def propsFile = rootProject.file('keystore.properties')
+//         def configName = 'release'
+
+//         if (propsFile.exists() && android.signingConfigs.hasProperty(configName)) {
+//             def props = new Properties()
+//             props.load(new FileInputStream(propsFile))
+//             android.signingConfigs[configName].STORE_FILE = file(props['STORE_FILE'])
+//             android.signingConfigs[configName].STORE_PASSWORD = props['STORE_PASSWORD']
+//             android.signingConfigs[configName].KEY_ALIAS = props['KEY_ALIAS']
+//             android.signingConfigs[configName].KEY_PASSWORD = props['KEY_PASSWORD']
+//         }
+//     }
+// }
+
 android {
     ndkVersion rootProject.ext.ndkVersion
 
@@ -152,6 +168,26 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+
+        release {
+            // if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
+            //     storeFile file(MYAPP_UPLOAD_STORE_FILE)
+            //     storePassword MYAPP_UPLOAD_STORE_PASSWORD
+            //     keyAlias MYAPP_UPLOAD_KEY_ALIAS
+            //     keyPassword MYAPP_UPLOAD_KEY_PASSWORD
+            // }
+
+            def propsFile = rootProject.file('keystore.properties')
+
+            if (propsFile.exists()) {
+                def props = new Properties()
+                props.load(new FileInputStream(propsFile))
+                storeFile = file(props['STORE_FILE'])
+                storePassword = props['STORE_PASSWORD']
+                keyAlias = props['KEY_ALIAS']
+                keyPassword = props['KEY_PASSWORD']
+            }
+        }
     }
     buildTypes {
         debug {
@@ -165,7 +201,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            // signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
